--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.7",
     "@walletconnect/ethereum-provider": "^2.11.2",
     "@walletconnect/web3wallet": "^1.10.2",
     "@web3modal/wagmi": "^4.0.8",
